# ScreenForge

./: .env_template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_CN.md  CLAUDE.md  CLAUDE_CN.md  CONTRIBUTING.md  LICENSE  README.md  README_CLI.md  README_CN.md  README_EN.md  action.yml  agent_cli.py  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/skills/diagnose/: SKILL.md
.claude/skills/operate-android/: SKILL.md
.claude/skills/operate-web/: SKILL.md
.claude/skills/run-workflow/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  release.yml
cli/: __init__.py  dispatch.py  doctor.py  parser.py  playground_sink.py  reporter.py  session.py  shared.py  shorthand.py  tool_protocol_handlers.py
cli/modes/: action.py  default.py  demo.py  dry_run.py  init.py  plan.py  workflow.py
common/: ai.py  ai_autonomous.py  ai_heal.py  capabilities.py  case_memory.py  error_codes.py  executor.py  failure_diagnosis.py  history_manager.py  logs.py  mcp_server.py  preflight.py  progress.py  prompts.py  run_reporter.py  run_resume.py  runtime_modes.py  tool_protocol.py  visual_fallback.py  workflow_schema.py
common/adapters/: __init__.py  android_adapter.py  base_adapter.py  ios_adapter.py  web_adapter.py
common/cache/: __init__.py  cache_hash.py  cache_manager.py  cache_stats.py  cache_storage.py  embedding_loader.py
config/: config.py  env_loader.py
docs/: agent_guide.md  architecture-deep-dive.md  awesome-mcp-submission.md  capability-matrix.md  capability-matrix_CN.md  distribution.md  launch-kit.md  mcp-setup.md  mobile-setup.md  playground-guide.md  playground-guide_CN.md
docs/examples/: README.md
docs/examples/mobile/: README.md
docs/examples/web/: SELFHEAL.md  checkboxes.workflow.yaml  inputs_form.workflow.yaml  test_checkboxes.py  test_inputs_form.py
docs/skills/: execute_ui_automation.md
docs/superpowers/plans/: 2026-06-09-playground-dom-tree.md
docs/tool_request_examples/: inspect_ui.json  load_case_memory.json
docs/workflows/: web_form_submit.yaml  web_login.yaml  web_search.yaml
playground/: __init__.py  app.py  cdp_screencast.py  dom_capture.py  index.html
report/allure-results/: 03e760fe-b017-4946-b0c2-6c08b497ebb1-container.json  ddeb2029-b14b-4fa4-a1b1-cac1a2598b9b-container.json  e961ae2e-271c-4fab-9538-450467dbd007-result.json
review/: patching.py  recorder.py  render.py  report_template.html
scripts/: bump_version.py  demo.tape  repair_venv.py
test_cases/: test_agent_surface.py  test_core_regressions.py  test_public_surface.py
tests/: conftest.py  test_action_mode_observation_stash.py  test_ai_autonomous.py  test_ai_brain.py  test_ai_heal.py  test_android_smoke_live.py  test_cache_hash.py  test_cache_manager.py  test_capabilities.py  test_cli_action_json.py  test_codegen_quality.py  test_dispatch.py  test_doctor_orphan_browser.py  test_dom_capture.py  test_error_codes.py  test_executor.py  test_failure_diagnosis.py  test_interaction_actions.py  test_ios_smoke_live.py  test_mcp_execute_observation.py  test_mcp_execute_parity_live.py  test_mcp_ref_cache.py  test_ml_optional.py  test_mode_error_code_threading.py  test_parser.py  test_playground_app.py  test_playground_sink.py  test_playground_sink_integration.py  test_review_cases.py  test_review_conftest_gating.py  test_review_filmstrip.py  test_review_html.py  test_review_json.py  test_review_locate_frame.py  test_review_patching.py  test_review_recorder.py  test_review_screenshot.py  test_review_smoke_live.py  test_run_reporter.py  test_run_resume.py  (+13 more)
utils/: screenshot_annotator.py  utils_ios.py  utils_web.py  utils_xml.py
