[project]
name = "screenforge"
version = "0.3.0"
description = "AI-driven cross-platform UI automation engine with test script generation"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "playwright>=1.50",
    "openai>=2.0",
    "allure-pytest>=2.15",
    "loguru>=0.7",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "pillow>=12.0",
    "lxml>=5.0",
    "requests>=2.30",
    "rich>=14.0",
    "typer>=0.24",
    "retry2>=0.9",
    "opencv-python>=4.10",
    "numpy>=1.24",
    "filelock>=3.12",
]

[project.optional-dependencies]
android = ["uiautomator2>=3.5", "adbutils>=2.12"]
ios = ["facebook-wda>=1.0"]
ml = ["torch>=2.0", "transformers>=5.0", "sentence-transformers>=5.0", "scikit-learn>=1.8"]
playground = ["fastapi>=0.115", "uvicorn>=0.34", "websockets>=14.0"]
all = ["screenforge[android,ios,ml,playground]"]

[project.urls]
Homepage = "https://github.com/jhinzzz/ScreenForge"
Repository = "https://github.com/jhinzzz/ScreenForge"
Issues = "https://github.com/jhinzzz/ScreenForge/issues"

[project.scripts]
screenforge = "cli.dispatch:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["common", "cli", "config", "utils"]

[tool.setuptools.packages.find]
include = ["cli*", "common*", "config*", "utils*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
exclude = ["test_cases/", "scripts/", "\\.worktrees/"]

[[tool.mypy.overrides]]
module = [
    "common.runtime_modes",
    "common.capabilities",
    "common.run_reporter",
    "common.run_resume",
    "cli.shorthand",
    "cli.parser",
    "cli._version",
]
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "cli.modes.*",
    "cli.shared",
    "cli.doctor",
    "cli.reporter",
    "cli.tool_protocol_handlers",
    "common.ai",
    "common.ai_autonomous",
    "common.ai_heal",
    "common.executor",
    "common.visual_fallback",
    "common.cache.*",
    "common.logs",
    "common.mcp_server",
    "common.tool_protocol",
    "common.workflow_schema",
    "common.adapters.*",
    "config.*",
    "utils.*",
    "main",
]
disable_error_code = ["misc", "no-any-return", "attr-defined", "union-attr", "arg-type", "var-annotated", "assignment", "index", "call-overload", "dict-item", "return-value", "empty-body"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
